Refactoring macros into a different header

--- a/kernelhardening/driver/Makefile
+++ b/kernelhardening/driver/Makefile
@@ -1,6 +1,11 @@
 KERNELDIR:=/lib/modules/$(shell uname -r)/build
 PWD=$(shell pwd)
 
+INCLUDES = -I. \
+	   -I/home/secondstorage/kernelhardening/kernelhardening/common/include
+
+ccflags-y += $(INCLUDES)
+
 obj-m += kernelhardening.o
 
 kernelhardening-y := main.o cr0.o cr4.o configfs_setup.o policy.o vmcall.o
