--- a/kernelhardening/test_modules/Makefile
+++ b/kernelhardening/test_modules/Makefile
@@ -1,6 +1,11 @@
 KERNELDIR:=/lib/modules/$(shell uname -r)/build
 PWD=$(shell pwd)
 
+INCLUDES = -I. \
+	   -I/home/secondstorage/kernelhardening/kernelhardening/common/include
+
+ccflags-y += $(INCLUDES)
+
 obj-m += cr0-pg.o
 
 cr0-pg-y := cr0_pg.o
